Sliding Drawer 에서 Click 오동작 버그 수정

--- a/nppang/res/values/attrs.xml
+++ b/nppang/res/values/attrs.xml
@@ -19,21 +19,19 @@
     
     <!-- SlidingDrawer specific attributes. These attributes are used to configure
          a SlidingDrawer from XML. -->
-    <declare-styleable name="SlidingDrawer">
-        <attr name="orientation">
-            <enum name="horizontal" value="0" />
-            <enum name="vertical" value="1" />
-        </attr>
+   <declare-styleable name="SlidingDrawer">
         <!-- Identifier for the child that represents the drawer's handle. -->
         <attr name="handle" format="reference" />
         <!-- Identifier for the child that represents the drawer's content. -->
         <attr name="content" format="reference" />
         <!-- Orientation of the SlidingDrawer. -->
-        
-        <!-- Extra offset for the handle at the bottom of the SlidingDrawer. -->
-        <attr name="bottomOffset" format="dimension"  />
+        <attr name="orientation">
+            <enum name="horizontal" value="0" />
+            <enum name="vertical" value="1" />
+        </attr>        <!-- Extra offset for the handle at the bottom of the SlidingDrawer. -->
+        <attr name="bottomOffset" format="dimension" />
         <!-- Extra offset for the handle at the top of the SlidingDrawer. -->
-        <attr name="topOffset" format="dimension"  />
+        <attr name="topOffset" format="dimension" />
         <!-- Indicates whether the drawer can be opened/closed by a single tap
              on the handle.  (If false, the user must drag or fling, or click
              using the trackball, to open/close the drawer.)  Default is true. -->
@@ -41,7 +39,7 @@
         <!-- Indicates whether the drawer should be opened/closed with an animation
              when the user clicks the handle. Default is true. -->
         <attr name="animateOnClick" format="boolean" />
-    </declare-styleable>   
+</declare-styleable> 
     
     
 </resources>
