--- a/nppang/res/layout/activity_main.xml
+++ b/nppang/res/layout/activity_main.xml
@@ -175,7 +175,7 @@
             android:id="@+id/cauly_ad_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentBottom="true"            
             app:appcode="7jpEiQ0c"
             app:effect="LeftSlide" />
 
@@ -187,6 +187,7 @@
             android:allowSingleTap="true"
             app:content="@+id/linear_layout_content"
             app:handle="@+id/handle"
+            app:topOffset="?android:attr/actionBarSize"
             app:orientation="vertical" >
 
             <Button
