--- a/nppang/res/values/color.xml
+++ b/nppang/res/values/color.xml
@@ -3,4 +3,11 @@
 
     <color name="edit_mode">#00FFFF</color>
     <color name="nomal_mode">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="green">#008000</color>
+    <color name="gray">#808080</color>
+    
+    
 </resources>
